fix spacing, font

--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,11 @@ body {
     align-items: center !important;
 }
 
+.fix__font {
+    font-family: 'Volkhov', serif !important;
+}
+
+
 /* HEADER */
 
 header {
@@ -543,9 +548,11 @@ header.sticky .dropdown .text-white {
 .farmServices {
     background: #009f4d;
     margin-top: 100px;
+    padding-bottom: 100px !important;
 }
 
 .Services__title {
+        font-family: 'Volkhov', serif !important;
     position: absolute;
     color: #fff;
     font-weight: bold;
@@ -1105,10 +1112,13 @@ body a, button, .btn {
 /*GALLERY */
 
 .gallery {
-    margin-bottom: 1.5em;
+    margin-bottom: 112px;
     display: grid;
     grid-gap: 0.5em;
-    margin-top:3rem;
+}
+
+.gallery .gallery__item h3 {
+    margin-right: 0;
 }
 .gallery__content {
     display: flex;
@@ -1353,7 +1363,7 @@ FEEDBack
 
 /* FOOTER  */
 .footer{
-    margin: 3rem 0;
+    margin: 60px 0;
 
 }
 
@@ -1417,7 +1427,11 @@ footer .footer__content h3{
 .Farmstead .FooterLogo  a{
 cursor: pointer;
 font-size: 30px;
-color: rgb(199, 112, 26);
+color: #fb811e;
+}
+
+.footer .FooterLogo i{
+    left: 51px;
 }
 .Farmstead .copyright a{
     color:  rgba(25, 142, 43, 0.729);
